# hyrecro_simulation

./: Dependencias
hyrecro/: CMakeLists.txt  package.xml
hyrecro/config/: rrbot_control.yaml
hyrecro/launch/: gazebo_hyrecro_GUI.launch  gazebo_hyrecro_targets.launch  test.launch
hyrecro/launch/.deprecated/: 2_gazebo_hyrecro_a.launch  2_hyrecro_a.launch  3_gazebo_hyrecro_a.launch  display_urdf.launch  gazebo_hyrecro (copy).launch  gazebo_hyrecro_a.launch  gazebo_hyrecro_sdf.launch  gazebo_hyrecro_testPlugin.launch  gazebo_hyrecro_world_plugin.launch  gazebo_os1_128.launch  gazebo_realsense.launch  gazebo_testHusky.launch  hyrecro_3urdf.launch  hyrecro_a.launch  hyrecro_b.launch  hyrecro_joints_controller.launch  initial_config.yaml  test_plugin.launch
hyrecro/rviz/: check_urdf.rviz  rviz_gazebo_hyrecro.rviz  rviz_gazebo_testHusky.rviz  rviz_hyrecro_realsense.rviz
hyrecro/scripts/: move_simulator.py
hyrecro/sdf/BACKUPS/hyrecro_A_serial_no_sensor/: model.sdf
hyrecro/sdf/BACKUPS/hyrecro_A_serial_ouster/: model.config
hyrecro/sdf/BACKUPS/hyrecro_A_serial_realsense/: model.sdf
hyrecro/sdf/BACKUPS/hyrecro_B_serial_ouster/: model.sdf
hyrecro/sdf/BACKUPS/hyrecro_B_serial_realsense/: model.config  model.sdf
hyrecro/sdf/SENSORS/OS1_128/: model.config  model.sdf
hyrecro/sdf/SENSORS/realsense_d435/: model.config  model.sdf
hyrecro/sdf/hyrecro_A_serial_no_sensor/: model.config
hyrecro/sdf/hyrecro_A_serial_ouster/: model.sdf
hyrecro/sdf/hyrecro_A_serial_realsense/: model.config  model.sdf
hyrecro/sdf/hyrecro_B_serial_no_sensor/: model.config  model.sdf
hyrecro/sdf/hyrecro_B_serial_ouster/: model.config
hyrecro/sdf/hyrecro_B_serial_realsense/: model.sdf
hyrecro/trajectories/: joint_targets_1.csv  target_2.csv  target_3.csv  target_4.csv
hyrecro/urdf/: TEST.urdf  TEST.xacro  hyrecro.urdf  hyrecro.xacro  hyrecro_joints_controller.urdf  hyrecro_joints_controller.xacro  hyrecro_os1.xacro  hyrecro_realsense.urdf  hyrecro_realsense.xacro  hyrecro_testPlugin.urdf  hyrecro_testPlugin.xacro  only_os1_128.urdf  only_os1_128.xacro  only_realsense_d435.urdf  only_realsense_d435.xacro  test_hyrecro.urdf  test_hyrecro.xacro
hyrecro/urdf/reticular_structure/: model.config  model.sdf
hyrecro/urdf/sensor/Deprecated/: os1.urdf  os1_materials.gazebo  os1_sensor.xacro  os1_sensors.gazebo
hyrecro/urdf/sensor/OUSTER/: os1_128.urdf.xacro  os1_128_MODIF.urdf.xacro  os1_64.urdf.xacro
hyrecro/urdf/sensor/REALSENSE/: d435_camera.xacro
hyrecro/worlds/: reticular_GUI_plugin.world  reticular_target_plugin.world
hyrecro/worlds/DEPRECATED/: my_World.world  reticular.world  reticular2.world  reticular3.world  reticular_plugin_backup.world  testHusky.world
hyrecro_pcl/: CMakeLists.txt  package.xml
hyrecro_pcl/launch/: offline_mapping.launch  online_mapping.launch  show_planes.launch
hyrecro_pcl/maps/set0/: map_Generalized.pcd  map_ICP.pcd  map_Normals.pcd
hyrecro_pcl/rviz/: offline_mapping.rviz
hyrecro_pcl/src/: offline_mapping.cpp  online_mapping.cpp  show_planes.cpp
hyrecro_pcl/src/.Backup/: copia_registration  extract_indices.cpp  filterPCD copy.cpp  filterPCD.cpp  getIndx.cpp  mapping.cpp  mappingrealsense.cpp  my_rosbag_to_pcd.cpp  save_PCD.cpp  test_pcl.cpp  topic_cloud_viewer.cpp  view_cloud.cpp
hyrecro_pcl/src/.Backup/Deprecated/: extract_normals.cpp  icpSameCloudRotated.cpp  pairwise_incremental.cpp  pairwise_incremental_MODIF.cpp  plane2planeReg.cpp  plane_segmentation.cpp  printStepByStepRegistration.cpp  regFromPCD.cpp  registration.cpp  registration_from_plane_indices.cpp  save_PCD_each_sec.cpp  segFromNormals.cpp
hyrecro_plugins/: CMakeLists.txt  package.xml
hyrecro_plugins/launch/: apiAccess.launch  helloPlugin.launch
hyrecro_plugins/src/: gazebo_ros_hyrecro_GUI.cpp  gazebo_ros_hyrecro_targets.cpp  test_plugin.cpp
hyrecro_plugins/worlds/: hello.world
